--- a/pair/movie/templates/movie/create.html
+++ b/pair/movie/templates/movie/create.html
@@ -1,10 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- 작성폼 -->
-<form action="{% url 'movie:write' %}">
-    <input type="text" name="title" placeholder="제목을 입력하세요">
-    <input type="text" name="content" placeholder="내용을 입력하세요">
-    <input type="submit" value="작성하기">
-</form>
+
+<div class="container" style="width: 600px">
+    <div class="my-5">
+        <h3 class="fw-lighter text-center">Review</h3>
+    </div>
+
+    <div class="mb-3 my-5" style="box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%); border-radius: 15px">
+        <form class="p-3" action="{% url 'movie:write' %}">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 67.52px">제 목</span>
+                <input type="text" name="title" class="form-control" placeholder="제목을 적어 주세요." aria-label="제목을 적어 주세요."
+                    aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">작성자</span>
+                <input type="text" name="writer" class="form-control" placeholder="이름을 적어 주세요." aria-label="이름을 적어 주세요."
+                    aria-describedby="basic-addon1">
+            </div>
+
+            <select class="form-select mb-3" name="score" id="inputGroupSelect01">
+                <option selected>평점 선택하세요</option>
+                <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
+                <option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option>
+                <option value="⭐⭐⭐">⭐⭐⭐</option>
+                <option value="⭐⭐">⭐⭐</option>
+                <option value="⭐">⭐</option>
+            </select>
+
+            <textarea class="form-control mb-3" rows="10" name="content"></textarea>
+
+            <div class="d-flex gap-2 justify-content-end">
+                <input type="submit" class="btn btn-primary" style="width: 85px" value="작성완료">
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
