--- a/pair/movie/templates/movie/detail.html
+++ b/pair/movie/templates/movie/detail.html
@@ -1,10 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ review.title }}</h1>
-<p>{{ review.content}}</p>
-<p>{{ review.created_at }}</p>
-<a href="{% url 'movie:edit' review.pk%}">수정</a>
-<a href="{% url 'movie:delete' review.pk %}">삭제</a>
+<div class="container" style="width: 600px">
+  <div class="my-5">
+    <h3 class="fw-lighter text-center">Review</h3>
+  </div>
+
+  <div class="p-4" style="box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%); border-radius: 15px">
+    <div class="d-flex justify-content-end">
+      <a class="mx-1" href="{% url 'movie:edit' review.pk%}" style="color: #35C5F0">수정</a>
+      <a class="mx-1" href="{% url 'movie:delete' review.pk %}" style="color: #f77">삭제</a>
+    </div>
+    <div class="">
+      <h2>{{ review.title }}</h2>
+      <p class="text-muted m-0">{{ review.writer }} <span class="fw-lighter">| {{ review.created_at }}</span></p>
+      <p class="m-0"> {{ review.score }} </p>
+    </div>
+    <hr>
+    <div class="mt-4">
+      <p>{{ review.content}}</p>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
