--- a/pair/movie/templates/movie/index.html
+++ b/pair/movie/templates/movie/index.html
@@ -3,27 +3,87 @@
 {% block content %}
 
 <!-- 리뷰작성 -->
-<div>
-    <a href="{% url 'movie:create' %}">리뷰작성</a>
-</div>
-<!-- 테이블 -->
-<table style="width: 1000px;">
-    <thead>
-        <tr class="p-3 mb-2 bg-dark text-white text-center">
-            <th scope="col">리뷰 번호</th>
-            <th scope="col">리뷰 제목</th>
-            <th scope="col">작성시간</th>
-        </tr>
-    </thead>
 
-    <tbody>
-        {% for review in reviews %}
-        <tr class="text-center">
-            <td scope="row">{{ review.id }}</td>
-            <td><a href="{% url 'movie:detail' review.pk%}">{{ review.title }}</a></td>
-            <td>{{ review.created_at }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<!-- 테이블 -->
+<div class="container">
+    <div class="my-5">
+        <h3 class="fw-lighter text-center">Movie</h3>
+    </div>
+
+    <div id="carouselExampleCaptions" class="carousel slide d-flex align-items-center" data-bs-ride="false">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://dummyimage.com/600x180/000/fff" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/600x180/000/fff" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/600x180/000/fff" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <hr>
+
+    <div class="d-flex justify-content-center">
+        <table class="table text-center align-middle" style="width: 100%;">
+            <thead>
+                <tr class="p-3 mb-2 bg-dark text-white text-center">
+                    <th scope="col">리뷰 번호</th>
+                    <th scope="col">리뷰 제목</th>
+                    <th scope="col">작성자</th>
+                    <th scope="col">작성시간</th>
+                    <th scope="col">평점</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for review in reviews %}
+                <tr class="text-center">
+                    <td scope="row">{{ review.id }}</td>
+                    <td><a href="{% url 'movie:detail' review.pk%}">{{ review.title }}</a></td>
+                    <td>{{ review.writer }}</td>
+                    <td>{{ review.created_at }}</td>
+                    <td>{{ review.score }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <div class="d-flex gap-2 justify-content-end">
+        <a class="btn btn-primary" href="{% url 'movie:details' %}" style="width: 8%">메인으로</a>
+    </div>
+
+</div>
 {% endblock %}
