--- a/pair/movie/templates/movie/create.html
+++ b/pair/movie/templates/movie/create.html
@@ -33,7 +33,8 @@
             <textarea class="form-control mb-3" rows="10" name="content"></textarea>
 
             <div class="d-flex gap-2 justify-content-end">
-                <input type="submit" class="btn btn-primary" style="width: 85px" value="작성완료">
+                <input type="submit" class="btn" style="width: 85px; background-color: #35C5F0; color: white;"
+                    value="작성완료">
             </div>
         </form>
     </div>
